<resources>
    <string name="app_name">QVCReplicate</string>
    <string name="TodaysSpecialValue">TODAY\'S SPECIAL VALUE</string>
    <string name="ItemOnAir">ITEM ON AIR</string>
    <string name="TopDeals">TOP DEALS</string>
    <string name="HotPicks">HOT PICS</string>
    <string name="NewArrivals">NEW ARRIVALS</string>
    <string name="Clearance">CLEARANCE</string>
    <string name="NewQvcCustomer">New QVC Customer</string>
    <string name="CreateAccount">CREATE ACCOUNT</string>
    <string name="ExistingCustomerRedirection">If you\'re an existing QVC customer but new to this app, please sign in with your QVC customer information</string>
</resources>