<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="10dp"
    app:cardCornerRadius="4dp"
    android:elevation="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:id="@+id/btTodaysSpecialValue"
                android:text="@string/TodaysSpecialValue"
                android:layout_margin="6dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:id="@+id/btItemOnAir"
                android:text="@string/ItemOnAir"
                android:layout_margin="6dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:id="@+id/btTopDeals"
                android:text="@string/TopDeals"
                android:layout_margin="6dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/HotPicks"
                android:id="@+id/btHotPicks"
                android:layout_margin="6dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/NewArrivals"
                android:id="@+id/btNewArrivals"
                android:layout_margin="6dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/Clearance"
                android:id="@+id/btClearance"
                android:layout_margin="6dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>