<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="Current QVC Customers"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etUsername"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/rounded_border"
        android:hint="QVC Username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/etPassword"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_border"
        android:hint="QVC Password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvForgotPassword"
        android:text="Forgot Password"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="SIGN IN"
        android:id="@+id/btLogin"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/NewQvcCustomer"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/CreateAccount"
            android:id="@+id/btCreateAccount"
            android:layout_gravity="center"
            android:background="@drawable/rounded_border"
            android:backgroundTint="#ffffff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="NOTE: "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/ExistingCustomerRedirection"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>